# learning_fastapi

./: .env  .env_compose  .env_test  .pre-commit-config.yaml  Dockerfile  README.md  database.py  docker-compose-tests.yaml  docker-compose.yaml  example.env  local.env  local.yaml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_sqlite_db.sqlite3
app/: config.py  database.py  main.py  models.py  schemas.py
app/admin/: Menu.xlsx  menu.json
app/celery/: tasks.py
app/celery/helpers/: compare.py  crud.py  dish.py  menu.py  parser.py  submenu.py
app/config/: base.py  cache.py  database.py  tasks.py
app/database/: database.py  models.py  redis_cache.py  schemas.py
app/models/: dish.py  menu.py  submenu.py
app/routers/: dish.py  menu.py  preview.py  submenu.py
app/schemas/: dish.py  menu.py  menu_preview.py  preview.py  submenu.py
app/services/: main.py
app/services/api/: dish.py  menu.py  preview.py  submenu.py
app/services/cache/: dish.py  menu.py  preview.py  submenu.py
app/services/database/: dish.py  main.py  menu.py  preview.py  submenu.py
app/services/tasks/: menu.py  parse.py
app/utils/: generators.py  pathfinder.py  sheet_parsing.py
tests/: conftest.py  test_case4_counters.py  test_celery_helpers.py  test_crud.py  test_crud_dish.py  test_crud_menu.py  test_crud_submenu.py  test_dish_crud.py  test_main.py  test_menu_crud.py  test_menu_preview.py  test_quantity_of_dishes_and_submenus_in_menu.py  test_submenu_crud.py
